--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body {
   letter-spacing: .1em;
   background: white;
   color: var(--darker);
-  font-family: 'Poiret One', cursive;
+  font-family: 'Helvetica';
 
 }
 
