added modal functionality

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ main {
 }
 :root {
   --primary: #8c54ff;
-  --secondary: #F3A847;
+  --secondary: #85ccff;
   --tertiary: #B12704;
   --light: #fafafa;
   --dark: #000000;
