--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ main {
 	max-width: 90%;
   padding: 50px 30px;
 }
+
 :root {
   --white: #fffffa;
   --lightest-blue: #78cdd7;
@@ -15,6 +16,8 @@ main {
   --spacing-five: calc(2.5rem);
 }
 
+
+/*----------------------------------------------BODY-------------------------------------------------------*/
 * {
   box-sizing: border-box;
 }
@@ -25,13 +28,13 @@ body {
 }
 
 body {
-  margin: 0;
-  padding: 0;
+  margin:0;
+  padding:0;
   font-weight: 600;
   line-height: 1.5;
   font-size: 18px;
   letter-spacing: .1em;
-  background: white;
+  background: var(--darkest-blue);
   color: var(--text);
   font-family: 'Helvetica';
 }
@@ -72,31 +75,12 @@ h6 {
   font-size: 1rem;
 }
 
-p {
-  font-size: 1.1rem;
-  margin-top: 0;
-  font-weight: lighter;
-}
-
-a {
-  color: var(--dark-blue);
-  text-decoration: none;
-  font-weight: bold;
-}
-
-a:hover {
-  color: var(--lightest-blue);
-}
 
 /*---------------------------------HEADER CODE---------------------------------------------------------------------------------------*/
 
-nav li {
-  cursor: pointer;
-}
-
 .navigation-bar {
   padding: 0 2rem 0 0;
-  margin: 0;
+  margin: 0px;
   background: white;
 }
 
@@ -106,28 +90,59 @@ nav li {
   transition: ease-in-out 200ms;
 }
 
-.navigation-bar a:hover {
-  color:#44a1a0;
-}
-
 .navigation-bar nav{
-  margin: auto;
+  margin: 0;
 }
 
 .navigation-bar ul{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: right;
+  align-items: center;
   list-style: none;
-  vertical-align: middle;
+  margin:0;
 }
 
 .navigation-bar li a{
   display: inline-block;
-  vertical-align: middle;
   padding: 1rem 2rem;
+  cursor: pointer;
+  text-decoration:none;
 }
+
+.navigation-bar ul li a:hover{
+  color:#78cdd7;
+}
+
+/*-----------------------------------------------HOME---------------------------------------------------------------------------*/
+
+.home-section {
+  padding:3.5rem 4.5rem;
+}
+
+.home-section img{
+  width:70%;
+  display:block;
+  margin:0 auto 0 auto;
+}
+
+
+/*-----------------------------------------------ABOUT---------------------------------------------------------------------------*/
+
+.MM-facts {
+  padding:3.5rem 4.5rem;
+  font-weight: lighter;
+}
+
+.MM-facts img{
+  width:45%;
+  display:block;
+  margin:0;
+  float:left;
+  padding:0;
+  margin-right:2rem;
+}
+
 
 img {
   max-width: 100%;
