--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ body {
   line-height: 1.5;
   font-size: 18px;
   letter-spacing: .1em;
-  background: var(--darkest-blue);
+  background: var(--white);
   color: var(--text);
   font-family: 'Helvetica';
 }
