trying to figure out how to line up the nav links along the right side of the nav bar

--- a/src/index.css
+++ b/src/index.css
@@ -114,6 +114,10 @@ h6 {
   color:#78cdd7;
 }
 
+.compressed-list {
+  text-align:left;
+}
+
 /*-----------------------------------------------HOME---------------------------------------------------------------------------*/
 
 .home-section {
