figuring out the nav thing still

--- a/src/index.css
+++ b/src/index.css
@@ -114,8 +114,12 @@ h6 {
   color:#78cdd7;
 }
 
-.compressed-list {
+.navigation-bar ul li {
   text-align:left;
+}
+
+.logo {
+  margin:1rem 0rem;
 }
 
 /*-----------------------------------------------HOME---------------------------------------------------------------------------*/
