--- a/src/index.css
+++ b/src/index.css
@@ -130,6 +130,7 @@ header ul li {
 
 .home-section {
   padding:3.5rem 4.5rem;
+  margin: 0px;
 }
 
 .home-section img{
@@ -224,7 +225,8 @@ header ul li {
 
 /*--------------------------------------------------RESUME--------------------------------------------------------------*/
 .resume {
-  margin:4rem 14rem;
+  padding:3.5rem 4.5rem;
+  font-weight: lighter;
 }
 
 .icons {
